# luabot

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  REUSE.toml  meson.build  meson_options.txt  test.lua
.github/: copilot-instructions.md
.github/plans/: CommandGenericHID.md  CommandJoystick.md  CommandXboxController.md  EventLoop.md  Trigger.md  command.md  vendordep.md
.github/prompts/: commands-api.md
.github/workflows/: build.yaml  pages.yaml  reuse.yaml  vendordep.yaml  vendordep.yml
bindings/: CMakeLists.txt  bindings.hpp  frc.lua  import.lua  meson.build  wpi.lua
bindings/bot/: Joystick.lua
bindings/cmd/: plan.md
bindings/ffi/: cscore.lua  ntcore.lua  wpiHal.lua
bindings/frc/: AddressableLED.yaml  DriverStation.yaml  Filesystem.lua  GenericHID.yaml  IterativeRobotBase.lua  Joystick.lua  Joystick.yaml  Pose2d.lua  RobotBase.lua  TimedRobot.lua  Timer.yaml  Watchdog.yaml  XboxController.yaml  ffi.lua  functions.cpp  meson.build
bindings/frc/apriltag/: init.lua
bindings/frc/shuffleboard/: Shuffleboard.yaml
bindings/frc/smartdashboard/: SmartDashboard.yaml
bindings/luabot/: class.lua  init.lua.in
bindings/wpi/: hal.lua  init.lua.in  meson.build
bindings/wpi/apriltag/: AprilTag.yaml  init.lua
bindings/wpi/clib/: cscore.lua  ntcore.lua  wpiHal.lua
bindings/wpi/cmd/: Command.lua  CommandScheduler.lua  FunctionalCommand.lua  InstantCommand.lua  PIDCommand.lua  RunCommand.lua  Subsystem.lua  WaitUntilCommand.lua  init.lua  plan.md
bindings/wpi/cmd/button/: CommandGenericHID.lua  CommandJoystick.lua  CommandXboxController.lua  InternalButton.lua  JoystickButton.lua  NetworkButton.lua  POVButton.lua  RobotModeTriggers.lua  Trigger.lua
bindings/wpi/cmd/sysid/: SysIdRoutine.lua
bindings/wpi/command/: CommandScheduler.yaml
bindings/wpi/event/: BooleanEvent.lua  EventLoop.lua
bindings/wpi/frc/: DriverStation.yaml  Filesystem.lua  GenericHID.lua  IterativeRobotBase.lua  Joystick.lua  RobotBase.lua  TimedRobot.lua  XboxController.lua  functions.cpp  init.lua
bindings/wpi/frc/livewindow/: LiveWindow.yaml
bindings/wpi/frc/shuffleboard/: Shuffleboard.yaml
bindings/wpi/hal/: ControlWord.lua  meson.build
bindings/wpi/math/: functions.cpp  geometry.cpp  meson.build
bindings/wpi/math/filter/: Debouncer.lua
bindings/wpi/math/geometry/: CoordinateAxis.lua  CoordinateSystem.lua  Pose2d.lua  Pose3d.lua  Pose3d.yaml  Quaternion.lua  Quaternion.yaml  Rotation2d.lua  Transform2d.lua  Transform3d.lua  Translation2d.lua  Translation3d.lua  Twist2d.lua  Twist3d.lua
bindings/wpi/util/: meson.build
bindings/wpilibc/: GenericHID.cpp  GenericHID.lua  Joystick.cpp
bindings/wpimath/: geometry.cpp
bindings/wpimath/geometry/: CoordinateAxis.lua  Pose2d.lua  Rotation2d.lua  Transform2d.lua  Transform3d.lua  Twist2d.lua  Twist3d.lua
docs/: architecture.rst  conf.py  contributing.rst  examples.rst  getting-started.rst  index.rst  installation.rst
examples/: vehicle.lua
include/bot/frc/: luarobot.hpp
include/luabot/: frc.hpp  luabot.h  luabot.hpp  luarobot.hpp  version.h.in
include/snider/: snider.h
include/snider/bot/: bot.hpp
meson/allwpilib/: meson.build
src/: console.c  ffi.cpp  lj_arch.h  luabot.c  luabot.cpp  meson.build
subprojects/: .gitignore  allwpilib.wrap  lanes.wrap  luajit.wrap
test/: CMakeLists.txt  CoordinateAxis_test.lua  Pose2d_test.lua  Rotation2d_test.lua  Simple.cpp  Simple.lua  Simple_test.lua  TestClass.lua  basics.cpp  benchmark.py  fib.cpp  fib.lua  luaunit.lua  meson.build  plusone.cpp  plusone.lua  requireall.lua
test/frc/: RobotsTest.lua  TimedTest.lua  meson.build
test/robots/: BadSyntaxRobot.lua  InitCrashRobot.lua  NoLoadRobot.lua  NoNewRobot.lua  NotATableRobot.lua
test/wpi/: AddressableLED_test.lua  CoordinateAxis_test.lua  Pose2d_test.lua  Rotation2d_test.lua  TestAddressableLED.lua  TestBooleanEvent.lua  TestClib.lua  TestCommand.lua  TestCommandGenericHID.lua  TestCommandJoystick.lua  TestCommandScheduler.lua  TestCommandXboxController.lua  TestDebouncer.lua  TestDriverStation.lua  TestEventLoop.lua  TestFilesystem.lua  TestFunctionalCommand.lua  TestGenericHID.lua  TestGeometry.lua  TestInstantCommand.lua  TestJoystick.lua  TestPose2d.lua  TestRobots.lua  TestRunCommand.lua  TestSubsystem.lua  TestTimed.lua  TestTrigger.lua  TestXboxController.lua  meson.build
util/: LuaBot.json.in  MockRobot.lua  allyaml.sh  build-luajit-linux.sh  build-luajit-linux64.sh  build-luajit-macos.sh  build-luajit-roborio-docker.sh  build-luajit-roborio.sh  checkbuild.sh  compat.lua  devbot  docs-plan.md  luabot.pom.in  luajit.py  parse.py  parse.yaml  parse2.py  removecomments.py  setup.nsi  simbot  simbot.cpp  simbot.lua  simbot.sh  testbuild.sh  vendordep.py  watch.py
util/luabot/: lprefix.h  main.cpp
util/parse/: Data.py  __init__.py
util/robots/: CommandRobot.lua  TestRobot.lua
util/tocode/: Data.py
vendordep/: CMakeLists.txt  LuaBot.json.in  WINDOWS_SYMBOL_EXPORT_ANALYSIS.md  artifacts.md  index.html  luabot.pom.in  luajit.pom.in  stub.c  vendordep.py
